add documentation using swagger completed
